--- a/src/Minicommerce.WebApi/appsettings.json
+++ b/src/Minicommerce.WebApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TokenKey": "this-is-a-very-long-secret-key-for-development-purposes-that-is-at-least-64-characters-long-and-should-be-replaced-in-production-environment",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=minicommerce;Username=postgres;Password=postgres"
+  },
   "AllowedHosts": "*"
 }
