Finished Working on Authentication

--- a/src/Minicommerce.Application/Minicommerce.Application.csproj
+++ b/src/Minicommerce.Application/Minicommerce.Application.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Auth\Queries\" />
     <Folder Include="Features\Category\Dtos\" />
     <Folder Include="Features\Category\Queries\" />
     <Folder Include="Features\Category\Validators\" />
